--- a/README.rdoc
+++ b/README.rdoc
@@ -1,23 +1,1 @@
-SQL Task:
-
-1)SELECT distinct status FROM tasks ORDER BY status ASC
-
-2)SELECT projects.name, COUNT(tasks.project_id) AS amount
- FROM projects LEFT JOIN tasks on projects.id = tasks.project_id GROUP BY project_id ORDER BY amount DESC
-
-3)SELECT projects.name, COUNT(tasks.project_id) AS amount
- FROM projects LEFT JOIN tasks on projects.id = tasks.project_id GROUP BY project_id ORDER BY name
-
-4)SELECT projects.name, tasks.name
- FROM projects  LEFT JOIN tasks on projects.id = tasks.project_id where projects.name like 'N%' ORDER BY projects.name
-
-5)SELECT projects.name, COUNT(tasks.project_id) AS amount
- FROM projects LEFT JOIN tasks on projects.id = tasks.project_id where projects.name like '%a%' GROUP BY project_id ORDER BY name
-
-6)SELECT name, COUNT(*) FROM tasks
-GROUP BY name HAVING  COUNT(*) > 1 ORDER by name 
-
-7)
-
-8)SELECT projects.name, COUNT(tasks.project_id) as amount from projects left join tasks on tasks.project_id = projects.id
- and tasks.status = 'completed' GROUP BY projects.id having COUNT(tasks.project_id)>1 ORDER by projects.id
+My test task
